Fixing footer orientation on mobile

--- a/stable/styles/black-highlighter.css
+++ b/stable/styles/black-highlighter.css
@@ -1477,6 +1477,7 @@ div.buttons.alignleft {
 	#footer {
 		width: auto;
 		bottom: 1rem;
+		align-self: auto;
 	}
 
 	#license-area {
