--- a/styles/main.css
+++ b/styles/main.css
@@ -982,6 +982,7 @@ div.buttons.alignleft {
 	#footer {
 		width: auto;
 		bottom: 1rem;
+		align-self: auto;
 	}
 
 	#license-area {
